# health-insurance-copilot

./: .env.example  .gitignore  README.md  health-insurance-copilot_structure.txt  pyproject.toml  setup_project.py
data/vector_store_backup/3773bebd-ebd6-4790-aae4-f865956a4b68/: index_metadata.pickle
scripts/: debug_vector_store.py  hybrid_retrieval_test.py  ingest_master_documents.py  ingest_policies.py  reranker.py  test_advanced_rag.py  test_cache.py  test_components.py  test_document_processing.py  test_rag_complete.py  test_rag_components.py  test_reranker.py  test_retrieval_debug.py  verify_ingestion.py
src/api/: main.py
src/core/: config.py  constants.py  exceptions.py
src/monitoring/: logger.py
src/services/llm/: ollama_client.py
src/services/rag/: __init__.py  chunker.py  conversation_manager.py  document_loader.py  embedding_service.py  fact_extractor.py  query_processor.py  query_rewriter.py  rag_chain.py  reranker.py  retriever.py  semantic_cache.py  semantic_chunker.py  text_processor.py  vector_store.py
