[project]
name = "health-insurance-copilot"
version = "0.1.0"
description = "Production-grade AI health insurance advisory chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # Core Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    
    # LLM & RAG Stack
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-core==0.3.18",
    "langchain-ollama==0.2.0",
    "langsmith==0.1.140",
    
    # Vector Store & Embeddings
    "chromadb==0.5.20",
    "sentence-transformers==3.3.1",
    "faiss-cpu==1.9.0",
    
    # Fine-tuning Stack
    "transformers==4.46.3",
    "peft==0.13.2",
    "accelerate==1.1.1",
    "datasets==3.1.0",
    "trl==0.12.1",
    
    # bitsandbytes - Platform specific
    "bitsandbytes==0.44.1; platform_system != 'Windows'",
    
    # PDF Processing
    "pypdf==5.1.0",
    "pdfplumber==0.11.4",
    "pymupdf==1.24.14",
    
    # Caching
    "redis==5.2.0",
    "diskcache==5.6.3",
    "aiocache==0.12.3",
    
    # Guardrails & Safety
    "detoxify==0.5.2",
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",
    
    # Evaluation
    "ragas==0.2.3",
    "bert-score==0.3.13",
    "rouge-score==0.1.2",
    "nltk==3.9.1",
    
    # Monitoring
    "prometheus-client==0.21.0",
    
    # HTTP & Async
    "httpx==0.27.2",
    "aiofiles==24.1.0",
    
    # Frontend
    "streamlit==1.40.1",
    "plotly==5.24.1",
    
    # Data Processing
    "pandas==2.2.3",
    "numpy==1.26.4",
    
    # Utilities
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "loguru==0.7.3",
    "pyyaml==6.0.2",
    "tenacity==9.0.0",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "black==24.10.0",
    "ruff==0.8.2",
    "mypy==1.13.0",
    "ipython==8.30.0",
    "jupyter==1.1.1",
    "jupyterlab==4.3.3",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
